add rc.searchByKwd api
