# brillinkmicros/api/rc/v2/rc_http.pb.go
@@ -34,7 +34,7 @@ type RcServiceHTTPServer interface {
 	GetReportDependencyData(context.Context, *GetDependencyDataReq) (*GetDependencyDataResp, error)
 	GetReportPdfByDepId(context.Context, *ReportDownloadReq) (*OssFileDownloadResp, error)
 	InsertReportDependencyData(context.Context, *InsertDependencyDataReq) (*SetDependencyDataResp, error)
-	ListReportInfos(context.Context, *PaginationReq) (*ReportInfosResp, error)
+	ListReportInfos(context.Context, *ReportInfoKwdSearchReq) (*ReportInfosResp, error)
 	RefreshReportContent(context.Context, *RefreshReportContentReq) (*RefreshReportContentResp, error)
 	UpdateReportDependencyData(context.Context, *UpdateDependencyDataReq) (*SetDependencyDataResp, error)
 }
@@ -53,13 +53,13 @@ func RegisterRcServiceHTTPServer(s *http.Server, srv RcServiceHTTPServer) {
 
 func _RcService_ListReportInfos0_HTTP_Handler(srv RcServiceHTTPServer) func(ctx http.Context) error {
 	return func(ctx http.Context) error {
-		var in PaginationReq
+		var in ReportInfoKwdSearchReq
 		if err := ctx.BindQuery(&in); err != nil {
 			return err
 		}
 		http.SetOperation(ctx, OperationRcServiceListReportInfos)
 		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
-			return srv.ListReportInfos(ctx, req.(*PaginationReq))
+			return srv.ListReportInfos(ctx, req.(*ReportInfoKwdSearchReq))
 		})
 		out, err := h(ctx, &in)
 		if err != nil {
@@ -209,7 +209,7 @@ type RcServiceHTTPClient interface {
 	GetReportDependencyData(ctx context.Context, req *GetDependencyDataReq, opts ...http.CallOption) (rsp *GetDependencyDataResp, err error)
 	GetReportPdfByDepId(ctx context.Context, req *ReportDownloadReq, opts ...http.CallOption) (rsp *OssFileDownloadResp, err error)
 	InsertReportDependencyData(ctx context.Context, req *InsertDependencyDataReq, opts ...http.CallOption) (rsp *SetDependencyDataResp, err error)
-	ListReportInfos(ctx context.Context, req *PaginationReq, opts ...http.CallOption) (rsp *ReportInfosResp, err error)
+	ListReportInfos(ctx context.Context, req *ReportInfoKwdSearchReq, opts ...http.CallOption) (rsp *ReportInfosResp, err error)
 	RefreshReportContent(ctx context.Context, req *RefreshReportContentReq, opts ...http.CallOption) (rsp *RefreshReportContentResp, err error)
 	UpdateReportDependencyData(ctx context.Context, req *UpdateDependencyDataReq, opts ...http.CallOption) (rsp *SetDependencyDataResp, err error)
 }
@@ -287,7 +287,7 @@ func (c *RcServiceHTTPClientImpl) InsertReportDependencyData(ctx context.Context
 	return &out, err
 }
 
-func (c *RcServiceHTTPClientImpl) ListReportInfos(ctx context.Context, in *PaginationReq, opts ...http.CallOption) (*ReportInfosResp, error) {
+func (c *RcServiceHTTPClientImpl) ListReportInfos(ctx context.Context, in *ReportInfoKwdSearchReq, opts ...http.CallOption) (*ReportInfosResp, error) {
 	var out ReportInfosResp
 	pattern := "/micros/rc/v2/report/infos"
 	path := binding.EncodeURL(pattern, in, true)
