# brillinkmicros/openapi.yaml
@@ -3,16 +3,20 @@
 
 openapi: 3.0.3
 info:
-    title: DwService API
+    title: RcService API
     version: 0.0.1
 paths:
-    /micros/dw/v2/enterprise/credential:
+    /micros/rc/v2/report/content:
         get:
             tags:
-                - DwService
-            operationId: DwService_GetEnterpriseCredential
+                - RcService
+            operationId: RcService_GetReportContent
             parameters:
-                - name: uscId
+                - name: processedId
+                  in: query
+                  schema:
+                    type: string
+                - name: lang
                   in: query
                   schema:
                     type: string
@@ -22,43 +26,44 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/EntArrayResp'
+                                $ref: '#/components/schemas/ReportContentResp'
                 default:
                     description: Default error response
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /micros/dw/v2/enterprise/ident:
-        get:
+    /micros/rc/v2/report/content/refresh:
+        put:
             tags:
-                - DwService
-            operationId: DwService_GetEnterpriseIdent
-            parameters:
-                - name: enterpriseName
-                  in: query
-                  schema:
-                    type: string
+                - RcService
+            operationId: RcService_RefreshReportContent
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/RefreshReportContentReq'
+                required: true
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/EntIdentResp'
+                                $ref: '#/components/schemas/RefreshReportContentResp'
                 default:
                     description: Default error response
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /micros/dw/v2/enterprise/industry:
+    /micros/rc/v2/report/dependency-data:
         get:
             tags:
-                - DwService
-            operationId: DwService_GetEnterpriseIndustry
+                - RcService
+            operationId: RcService_GetReportDependencyData
             parameters:
-                - name: uscId
+                - name: contentId
                   in: query
                   schema:
                     type: string
@@ -68,66 +73,75 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/EntStrArrayResp'
+                                $ref: '#/components/schemas/GetDependencyDataResp'
                 default:
                     description: Default error response
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /micros/dw/v2/enterprise/info:
-        get:
+        put:
             tags:
-                - DwService
-            operationId: DwService_GetEnterpriseInfo
-            parameters:
-                - name: uscId
-                  in: query
-                  schema:
-                    type: string
+                - RcService
+            operationId: RcService_UpdateReportDependencyData
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/UpdateDependencyDataReq'
+                required: true
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/EntStructResp'
+                                $ref: '#/components/schemas/SetDependencyDataResp'
                 default:
                     description: Default error response
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /micros/dw/v2/enterprise/product:
-        get:
+        post:
             tags:
-                - DwService
-            operationId: DwService_GetEnterpriseProduct
-            parameters:
-                - name: uscId
-                  in: query
-                  schema:
-                    type: string
+                - RcService
+            operationId: RcService_InsertReportDependencyData
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/InsertDependencyDataReq'
+                required: true
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/EntStrArrayResp'
+                                $ref: '#/components/schemas/SetDependencyDataResp'
                 default:
                     description: Default error response
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /micros/dw/v2/enterprise/ranking-list:
+    /micros/rc/v2/report/download:
         get:
             tags:
-                - DwService
-            operationId: DwService_GetEnterpriseRankingList
+                - RcService
+            operationId: RcService_GetReportPdfByDepId
             parameters:
-                - name: uscId
+                - name: depId
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+                - name: lang
+                  in: query
+                  schema:
+                    type: string
+                - name: fileName
                   in: query
                   schema:
                     type: string
@@ -137,7 +151,68 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/EntArrayResp'
+                                $ref: '#/components/schemas/OssFileDownloadResp'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /micros/rc/v2/report/infos:
+        get:
+            tags:
+                - RcService
+            operationId: RcService_ListReportInfos
+            parameters:
+                - name: kwdName
+                  in: query
+                  schema:
+                    type: string
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint32
+                - name: pageNum
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ReportInfosResp'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /micros/rc/v2/report/internal/for-convert:
+        get:
+            tags:
+                - RcService
+            operationId: RcService_GetReportContentByDepIdNoDs
+            parameters:
+                - name: depId
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+                - name: lang
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ReportContentResp'
                 default:
                     description: Default error response
                     content:
@@ -146,58 +221,41 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
-        EntArrayResp:
+        GetDependencyDataResp:
             type: object
             properties:
-                success:
-                    type: boolean
-                code:
+                id:
                     type: integer
-                    format: int32
-                msg:
-                    type: string
-                data:
-                    type: array
-                    items:
-                        type: object
-        EntIdentResp:
-            type: object
-            properties:
-                success:
-                    type: boolean
-                code:
+                    format: int64
+                contentId:
                     type: integer
-                    format: int32
-                msg:
-                    type: string
+                    format: int64
                 uscId:
                     type: string
-        EntStrArrayResp:
-            type: object
-            properties:
-                success:
-                    type: boolean
-                code:
+                lhQylx:
                     type: integer
                     format: int32
-                msg:
-                    type: string
-                data:
-                    type: array
-                    items:
-                        type: string
-        EntStructResp:
-            type: object
-            properties:
-                success:
-                    type: boolean
-                code:
+                lhCylwz:
                     type: integer
                     format: int32
-                msg:
+                lhGdct:
+                    type: integer
+                    format: int32
+                lhQybq:
+                    type: integer
+                    format: int32
+                lhYhsx:
+                    type: integer
+                    format: int32
+                lhSfsx:
+                    type: integer
+                    format: int32
+                additionData:
                     type: string
-                data:
-                    type: object
+                createdAt:
+                    type: string
+                updatedAt:
+                    type: string
         GoogleProtobufAny:
             type: object
             properties:
@@ -206,6 +264,143 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        InsertDependencyDataReq:
+            type: object
+            properties:
+                uscId:
+                    type: string
+                lhQylx:
+                    type: integer
+                    format: int32
+                lhCylwz:
+                    type: integer
+                    format: int32
+                lhGdct:
+                    type: integer
+                    format: int32
+                lhYhsx:
+                    type: integer
+                    description: int32 lh_qybq = 5;
+                    format: int32
+                lhSfsx:
+                    type: integer
+                    format: int32
+                additionData:
+                    type: string
+        OssFileDownloadResp:
+            type: object
+            properties:
+                available:
+                    type: boolean
+                msg:
+                    type: string
+                url:
+                    type: string
+                createdAt:
+                    type: string
+        RefreshReportContentReq:
+            type: object
+            properties:
+                contentId:
+                    type: integer
+                    format: int64
+        RefreshReportContentResp:
+            type: object
+            properties:
+                success:
+                    type: boolean
+                msgPubTime:
+                    type: string
+                msg:
+                    type: string
+        ReportContentResp:
+            type: object
+            properties:
+                content:
+                    type: object
+                    description: 报告内容
+                available:
+                    type: boolean
+                msg:
+                    type: string
+        ReportI18nInfo:
+            type: object
+            properties:
+                lang:
+                    type: string
+                contentId:
+                    type: integer
+                    format: int64
+                available:
+                    type: boolean
+        ReportInfo:
+            type: object
+            properties:
+                contentId:
+                    type: integer
+                    description: 报告id
+                    format: int64
+                enterpriseName:
+                    type: string
+                    description: 企业名称
+                unifiedCreditId:
+                    type: string
+                    description: 企业统一信用社会代码
+                dataCollectMonth:
+                    type: string
+                    description: 报文更新月份
+                available:
+                    type: boolean
+                    description: 报告是否可用
+                contentUpdatedTime:
+                    type: string
+                    description: 报告生成时间 yyyy-MM-dd HH:mm:ss
+                lhQylx:
+                    type: integer
+                    description: 报告状态码
+                    format: int32
+                i18nInfos:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/ReportI18nInfo'
+                    description: 英文报告id
+                depId:
+                    type: integer
+                    description: rc_dependency_data.id
+                    format: int64
+                processedId:
+                    type: string
+        ReportInfosResp:
+            type: object
+            properties:
+                reportInfos:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/ReportInfo'
+                pageNum:
+                    type: integer
+                    format: uint32
+                pageSize:
+                    type: integer
+                    format: uint32
+                total:
+                    type: integer
+                    format: uint32
+                totalPage:
+                    type: integer
+                    format: uint32
+        SetDependencyDataResp:
+            type: object
+            properties:
+                success:
+                    type: boolean
+                isGenerated:
+                    type: boolean
+                code:
+                    type: integer
+                    format: int32
+                msg:
+                    type: string
         Status:
             type: object
             properties:
@@ -222,5 +417,29 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        UpdateDependencyDataReq:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+                lhQylx:
+                    type: integer
+                    format: int32
+                lhCylwz:
+                    type: integer
+                    format: int32
+                lhGdct:
+                    type: integer
+                    format: int32
+                lhYhsx:
+                    type: integer
+                    description: int32 lh_qybq = 6;
+                    format: int32
+                lhSfsx:
+                    type: integer
+                    format: int32
+                additionData:
+                    type: string
 tags:
-    - name: DwService
+    - name: RcService
